# igv-reports

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  create_datauri.py  create_fusion_report.py  create_report.py  create_variant_report.py  deploy.md  generate_report.py  get_datauri.py  mutation_report.py  pyproject.toml  requirements.txt  run_examples.sh  setup.py  variant_report.py
docs/: index.md
examples/: example_ann.html  example_bed.html  example_bedpe.html  example_config.html  example_dups.html  example_fusions.html  example_genome.html  example_idlink.html  example_junctions.html  example_local.sh  example_maf.html  example_noembed.html  example_remote.sh  example_softclip.html  example_tab.html  example_vcf.html  example_wig.html
igv_reports/: __init__.py  bam.py  bed.py  bed_table.py  bedtable.py  chr_alias.py  chralias.py  coverage.py  create_variant_report.py  data_uri.py  datauri.py  fasta.py  feature.py  featureTree.py  fileReaders.md  generictable.py  genome.py  ideogram.py  regions.py  report.py  stream.py  tabix.py  tracks.py  twobit.py  utils.py  variant_report.py  variant_table.py  varianttable.py  vcf.py  wig.py
report/: bam.py  data_uri.py  fasta.py  ideogram.py  json.py  regions.py  tabix.py  tracks.py  variant_table.py  vcf.py
templates/: variant_template.html
test/: context.py  example_footer.html  example_header.html  test_bam.py  test_bed.py  test_datauri.py  test_fasta.py  test_feature.py  test_feature_file.py  test_ideogram.py  test_regions.py  test_stream.py  test_table.py  test_track.py  test_twobit.py  test_utils.py  test_vcf.py  (+1 more)
(+152 files in other folders)
