[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "igv-reports"
version = "1.16.3"
authors = [
  { name="Jim Robinson" },
]
description = "Creates self-contained html pages for visual variant review with IGV (igv.js)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["igv", "bioinformatics", "genomics", "visualization", "variant"]
dependencies = [
    "pysam",
    "intervalTree",
    "requests",
    "pytwobit",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/igvteam/igv-reports"

[project.scripts]
create_report = "igv_reports.report:main"
create_datauri = "igv_reports.datauri:main"

[tool.setuptools]
package-data = { "igv_reports" = ["templates/*"] }

[tool.setuptools.packages.find]
where = ["."]
